Ações de comentário

--- a/src/app/components/card-form/card-form.component.html
+++ b/src/app/components/card-form/card-form.component.html
@@ -18,8 +18,8 @@
         </div>
     </div>
     <div class="form-group">
-        <label for="list">Lista</label>
-        <select name="list" id="list" formControlName="list">
+        <label for="tag">Tag</label>
+        <select name="tag" id="tag" formControlName="tag">
             <option *ngFor="let item of states" [value]="item">{{item}}</option>           
         </select>
 
