--- a/src/app/pages/edit-card/edit-card.component.html
+++ b/src/app/pages/edit-card/edit-card.component.html
@@ -4,7 +4,7 @@
     </div>
         <app-card-form 
         (onsubmit)="editP($event)" 
-        [cardData]="productData" 
+        [cardData]="cardData" 
         [btnText]="btnText" 
         [title]="title">
         </app-card-form>
