--- a/src/app/pages/view-card/view-card.component.css
+++ b/src/app/pages/view-card/view-card.component.css
@@ -5,10 +5,11 @@
     justify-content: center;
     align-items: center;
     flex-direction: column; 
+    background-color: white;
     
 }
 .card{
-    background-color: #fff;
+    background-color: #ececec;
     width: 60%;  
     padding: 1rem;
     border-radius: .5rem;
@@ -36,6 +37,7 @@ button:hover {
     outline: 0;
     border: none;
     margin-left: 10px;
+    background-color: white;
 }
 
 .clear fa-icon {
@@ -94,10 +96,10 @@ button:hover {
     border: none;
     outline: 0;
     cursor:  pointer;
-    background-color: #e2e2e2;
+    background-color: white;
 }
 .addContent button:hover {   
-    background-color: #c4c4c4;
+    box-shadow: 2px 3px 5px #919191;
 }
 
 
@@ -117,7 +119,7 @@ button:hover {
 .formGroup .descriptionText{
     width: 100%;
     height: 80px;
-    background-color:#eeeeee;
+    background-color: white;
     border: none;
     outline: 0;
     padding-left: 5px;
@@ -128,7 +130,7 @@ button:hover {
 .comment {
     height: 40px;
     width: 100%;
-    background-color:#eeeeee;
+    background-color:white;
     border: none;
     outline: 0;
     padding-left: 5px;
@@ -142,21 +144,23 @@ button:hover {
     border: none;
     outline: 0;
     cursor:  pointer;
-    background-color: #eeeeee;
+    background-color: white;
 
 }
 
-.buttonsComment > button {
+.buttonsComment  button {
     padding: 3px;
     border-radius: 2px;    
     border: none;
     outline: 0;
     cursor:  pointer;
-    /* background-color: #eeeeee; */
+    background-color: white;
     font-size: 0.8em;
+    color: #03658c;
 }
 .buttonsComment > button:last-child {
    margin-left: 5px;
+   color: #8c0337;
 }
 
 .buttonsComment > fa-icon {
@@ -271,3 +275,193 @@ button:hover {
 ::-webkit-scrollbar-thumb {
     box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
 }
+
+
+
+/* ===========================*/
+
+
+
+.container-comment {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+   
+}
+
+/**
+ * Lineas / Detalles
+ -----------------------*/
+/**
+ * Avatar
+ ---------------------------*/
+ .comment-avatar {
+	width: 50px;
+	height: 50px;
+	position: relative;
+	z-index: 99;
+	float: left;
+	border: 3px solid #FFF;
+	-webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
+	border-radius: 4px;
+	-webkit-box-shadow: 0 1px 2px rgba(0,0,0,0.2);
+	-moz-box-shadow: 0 1px 2px rgba(0,0,0,0.2);
+	box-shadow: 0 1px 2px rgba(0,0,0,0.2);
+	overflow: hidden;
+}
+
+.comment-avatar img {
+	width: 100%;
+	height: 100%;
+}
+
+.reply-list .comment-avatar {
+	width: 50px;
+	height: 50px;
+}
+
+.comment-main-level:after {
+	content: '';
+	width: 0;
+	height: 0;
+	display: block;
+	clear: both;
+}
+/**
+ * Caja del Comentario
+ ---------------------------*/
+.comment-box {
+	width: 85%;
+	float: right;
+	position: relative;
+    margin-top: 8px;
+	-webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.15);
+	-moz-box-shadow: 0 1px 1px rgba(0,0,0,0.15);
+	box-shadow: 0 1px 1px rgba(0,0,0,0.15);
+}
+
+ .comment-box:before, .comment-box:after {
+	content: '';
+	height: 0;
+	width: 0;
+	position: absolute;
+	display: block;
+	border-width: 10px 12px 10px 0;
+	border-style: solid;
+	border-color: transparent #FCFCFC;
+	top: 8px;
+	left: -11px;
+}
+
+ .comment-box:before {
+	border-width: 11px 13px 11px 0;
+	border-color: transparent rgba(0,0,0,0.05);
+	left: -12px;
+}
+
+/* .reply-list .comment-box {
+	width: 610px;
+} */
+
+.comment-box .comment-head {
+	background: #FCFCFC;
+	padding: 10px 12px;
+    height: 35px;
+	border-bottom: 1px solid #E5E5E5;
+	overflow: hidden;
+	-webkit-border-radius: 4px 4px 0 0;
+	-moz-border-radius: 4px 4px 0 0;
+	border-radius: 4px 4px 0 0;
+}
+
+.comment-box .comment-head i {
+	float: right;
+	margin-left: 14px;
+	position: relative;
+	top: 2px;
+	color: #A6A6A6;
+	cursor: pointer;
+	-webkit-transition: color 0.3s ease;
+	-o-transition: color 0.3s ease;
+	transition: color 0.3s ease;
+}
+
+.comment-box .comment-head i:hover {
+	color: #03658c;
+}
+
+.comment-box .comment-name {
+	color: #283035;
+	font-size: 14px;
+	font-weight: 700;
+	float: left;
+	margin-right: 10px;
+}
+
+.comment-box .comment-name a {
+	color: #283035;
+}
+
+.comment-box .comment-head span {
+	float: left;
+	position: relative;
+    background: #03658c;
+	color: #FFF;
+	font-size: 12px;
+	padding: 0px 5px;
+	font-weight: 500;
+    margin-right: 10px; 
+    border-radius: 5px;
+}
+
+.comment-box .comment-content {
+	background: #FFF;
+	padding: 12px;
+	font-size: 15px;
+	color: #595959;
+    width: 100%;
+    border: 0;
+    outline: none;
+	-webkit-border-radius: 0 0 4px 4px;
+	-moz-border-radius: 0 0 4px 4px;
+	border-radius: 0 0 4px 4px;
+}
+
+.comment-box .comment-name.by-author, .comment-box .comment-name.by-author a {color: #03658c;}
+.comment-box .comment-name.by-author:after {
+	/* content: 'Criando em:'; */
+	background: #03658c;
+	color: #FFF;
+	font-size: 12px;
+	padding: 3px 5px;
+	font-weight: 500;
+	margin-left: 5px;
+	-webkit-border-radius: 3px;
+	-moz-border-radius: 3px;
+	border-radius: 3px;
+}
+
+.comment-conteiner {
+    display: flex;
+    justify-content: space-between;
+    /* align-items: center; */
+    width: 100%;
+}
+
+/** =====================
+ * Responsive
+ ========================*/
+/* @media only screen and (max-width: 766px) {
+	.comments-container {
+		width: 480px;
+	}
+
+	.comments-list .comment-box {
+		width: 390px;
+	}
+
+	.reply-list .comment-box {
+		width: 320px;
+	}
+} */
