--- a/src/app/pages/view-card/member/member.component.html
+++ b/src/app/pages/view-card/member/member.component.html
@@ -1,17 +1,30 @@
-<h1 mat-dialog-title>Adiconar membro ao card.</h1>
+
+<div class="clearC">
+  <h1 mat-dialog-title>Adicionar membro.</h1>
+  <button class="clear" (click)="closeDialog()">
+      <fa-icon [icon]="faXmark"></fa-icon>
+  </button>
+</div>
 <div class="search">
     <input type="text" name="search" id="" (input)="searchs($event)" placeholder="Pesquise por um membro.">
 </div>
 <form [formGroup]="memberForm">
-<div mat-dialog-content>
+  <div >
+    <div class="conteinerMember" *ngFor="let item of userData">
+      <label>
+        <input type="checkbox" formControlName="memberList" (change)="onchange($event, item)"> {{item.name}}
+      </label>
+    </div>   
+  </div>
+<!-- <div mat-dialog-content > 
     <mat-selection-list formControlName="memberList" *ngFor="let item of userData">
         <mat-list-option  checkboxPosition="before" >
          <p >{{item.name}}</p>
         </mat-list-option>
       </mat-selection-list>
-</div>
-<div mat-dialog-actions>
-  <button (click)="addMember($event)">Adicionar</button>
+</div> -->
+<!-- <div mat-dialog-actions>
+  <button type="submit">Adicionar</button>
   <button mat-button mat-dialog-close cdkFocusInitial>Cancelar</button>
-</div>
+</div> -->
 </form>
