--- a/src/app/components/card-form/card-form.component.html
+++ b/src/app/components/card-form/card-form.component.html
@@ -3,34 +3,40 @@
         <div class="title">
             <h2>{{title}}</h2>
         </div>
-    <div class="form-group" *ngIf="!cardData ? code.invalid : code.valid " >
-        <label for="code">Código:</label>
-        <input type="number" name="code" id="code" formControlName="code"/>
-        <div *ngIf="code.invalid && formdG.submitted" class="validation">
-            <p>O código é obirgatório!</p>
+        <div class="form-group" *ngIf="!cardData ? code.invalid : code.valid ">
+            <label for="code">Código:</label>
+            <input type="number" name="code" id="code" formControlName="code" />
+            <div *ngIf="code.invalid && formdG.submitted" class="validation">
+                <p>O código é obirgatório!</p>
+            </div>
         </div>
-    </div>
-    <div class="form-group">
-        <label for="title">Titulo</label>
-        <input type="text" name="title" id="title" formControlName="title" />
-        <div *ngIf="name && formdG.submitted" class="validation">
-            <p>O nome é obirgatório!</p>
+        <div class="form-group">
+            <label for="title">Titulo</label>
+            <input type="text" name="title" id="title" formControlName="title" />
+            <div *ngIf="name && formdG.submitted" class="validation">
+                <p>Título é obirgatório!</p>
+            </div>
         </div>
-    </div>
-    <div class="form-group">
-        <label for="tag">Tag</label>
-        <select name="tag" id="tag" formControlName="tag">
-            <option *ngFor="let item of states" [value]="item">{{item}}</option>           
-        </select>
+        <div class="form-group">
+            <label for="tag">Tag</label>
+            <select name="tag" id="tag" formControlName="tag">
+                <option *ngFor="let item of states" [value]="item">{{item}}</option>
+            </select>
 
+        </div>
+        <div class="form-group">
+            <label for="deliveryDate">Data de Entrega</label>
+            <!-- <input type="date" name="deliveryDate" id="deliveryDate" formControlName="deliveryDate" /> -->
+
+            <!-- <mat-label>Data de Entrega</mat-label> -->
+            <input class="datePicker" matInput [matDatepicker]="picker" formControlName="delivery_date">
+            <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+            <mat-datepicker #picker></mat-datepicker>
+
+        </div>
+        <div class="button">
+            <input type="submit" value="{{btnText}}">
+            <input type="submit" value="Cancelar" (click)="back()" class="cancel">
+        </div>
     </div>
-    <div class="form-group">
-        <label for="deliveryDate">Data de Entrega</label>
-        <input type="date" name="deliveryDate" id="deliveryDate" formControlName="deliveryDate" />
-    </div>
-    <div class="button">
-        <input type="submit" value="{{btnText}}">
-        <input type="submit" value="Cancelar" (click)="back()" class="cancel">
-    </div>
-</div>
 </form>
