--- a/src/app/pages/view-card/member/member.component.css
+++ b/src/app/pages/view-card/member/member.component.css
@@ -2,6 +2,35 @@ button {
     margin-right: 8px;
   }
 
+  .clearC {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    /* background-color: red; */
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .clearC button {
+    width: 30px;
+    height: 30px;
+    border-radius: 10px;
+    cursor: pointer;
+    outline: 0;
+    border: none;
+    margin-top: -15px;
+    background-color: rgb(228, 228, 228);
+}
+
+.clearC button:hover {
+  box-shadow: 1px 1px 3px rgb(110, 110, 110);
+}
+
+.clear fa-icon {
+    font-size: 1.5em;
+    color: #535353;
+}
+
   .search {
     width: 100%;
     height: 2rem;
@@ -18,4 +47,19 @@ button {
     border: 1px solid #696969;
     outline: 0;
     box-shadow: 1px 1px 3px rgb(110, 110, 110);
+  }
+
+  .conteinerMember {
+    display: flex;
+    flex-direction: row;
+    margin-top: 10px;
+  }
+  .conteinerMember input {
+    width: 1rem;
+  }
+
+  .conteinerMember label {
+    margin-left: 10px;
+    font-size: 1.3em;
+    font-weight: 400;
   }
