--- a/src/app/pages/view-card/view-card.component.css
+++ b/src/app/pages/view-card/view-card.component.css
@@ -81,7 +81,7 @@ button:hover {
 .addContent {   
     display: flex;        
     flex-direction: column;
-    width: 30%;
+    width: 25%;
 }
 
 .addContent h3{   
@@ -494,3 +494,55 @@ button:hover {
 		width: 320px;
 	}
 }
+
+.file-contianer {
+    width: 100%;
+    /* height: 6rem; */
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    border-bottom: solid 0.7px rgb(172, 172, 172);
+    margin-bottom: 5px;
+}
+
+.file-content {
+    width: 100%;
+    /* height: 6rem; */
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 10px 5px;
+}
+
+.file-img {
+    background-color: #A6A6A6;
+    width: 5.6rem;
+    /* height: 5.6rem; */
+}
+
+.file-img img {
+    width: 5.6rem;
+    /* height: 5.6rem; */
+
+}
+
+.file-title {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;    
+    width: 100%;
+    margin-bottom: -15px;
+}
+
+.file-desc {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.file-desc h4 {
+    margin-top: 10px;
+}
+
