layout anexo finalizado

--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -7,7 +7,7 @@
     color: white;
   }
   .containerNav {
-    background-color: #38b0b4;
+    background-color: #038c53;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
