--- a/src/app/pages/view-card/view-card.component.css
+++ b/src/app/pages/view-card/view-card.component.css
@@ -515,7 +515,7 @@ button:hover {
 }
 
 .file-img {
-    background-color: #A6A6A6;
+    /* background-color: #A6A6A6; */
     width: 5.6rem;
     /* height: 5.6rem; */
 }
