--- a/src/app/pages/view-card/attach/attach.component.html
+++ b/src/app/pages/view-card/attach/attach.component.html
@@ -5,26 +5,14 @@
         <fa-icon [icon]="faXmark"></fa-icon>
     </button>
   </div>
-  <div class="search">
-      <input type="text" name="search" id=""  placeholder="Pesquise por um membro.">
-  </div>
   <form [formGroup]="memberForm">
     <div >
-      <div class="conteinerMember" *ngFor="let item of userData">
-        <label>
-          <input type="checkbox" formControlName="memberList"> {{item.name}}
-        </label>
-      </div>   
+      <div class="conteinerFile">
+          <input type="file" formControlName="uploadArq" (change)="onFileSelected($event)">
+      </div> 
+      <div  *ngIf="hasFile()" class="importedTilte">
+        <h2>Arquivo importado!</h2> 
+        <button (click)=" upload(cardData._id)">Enviar</button>
+      </div>
     </div>
-  <!-- <div mat-dialog-content > 
-      <mat-selection-list formControlName="memberList" *ngFor="let item of userData">
-          <mat-list-option  checkboxPosition="before" >
-           <p >{{item.name}}</p>
-          </mat-list-option>
-        </mat-selection-list>
-  </div> -->
-  <!-- <div mat-dialog-actions>
-    <button type="submit">Adicionar</button>
-    <button mat-button mat-dialog-close cdkFocusInitial>Cancelar</button>
-  </div> -->
   </form>
